fixing some spacing

--- a/style.css
+++ b/style.css
@@ -100,8 +100,7 @@ button:last-child {
     background-color: #3B29FF;
     grid-row: 1 / 3;
     display: grid;
-    grid-template: 100px repeat(auto-fit, minmax(1px, 1fr)) / 1fr;
-
+    grid-template: 100px repeat(auto-fit, minmax(100px, 5fr)) / 1fr;
 }
 
 .logo {
@@ -124,6 +123,10 @@ button:last-child {
     align-items: center;
 }
 
+.side-menu-2 {
+    margin-top: 50px;
+}
+
 ul {
     padding-inline-start: 0;
 }
@@ -138,12 +141,14 @@ ul {
 h2 {
     font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
     font-weight: normal;
+    margin: 10px;
+    align-self: end;
 }
 
 .cards {
     display: grid;
     grid-template: repeat(auto-fit, minmax(250px, 0.2fr)) / repeat(auto-fit, minmax(250px, 0.5fr));
-    gap: 15px;
+    gap: 25px;
 }
 
 .card {
@@ -201,6 +206,7 @@ h2 {
 .others {
     display: grid;
     grid-template: repeat(auto-fit, minmax(50px, 0.5fr)), 0.1fr, repeat(auto-fit, minmax(150px, 1fr)) / 1fr;
+    gap: 10px;
 }
 
 .others h2 {
@@ -241,5 +247,17 @@ h2 {
 
 .feed {
     display: grid;
-    grid-template: 1fr / 0.15fr 1fr;
+    grid-template: repeat(auto-fit, minmax(50px, 1fr)) / 0.15fr 1fr;
+    gap: 2px;
+    align-items: center;
+}
+
+.feed-text p {
+    margin: 0;
+    font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
+    font-weight: 400;
+}
+
+.feed-text .nickname {
+    font-weight: 800;
 }
